--- a/templates/snippet/footer2.html
+++ b/templates/snippet/footer2.html
@@ -15,7 +15,7 @@
             <div>
                 <p><strong class="footer-strong">Head Office:</strong></p>
                 <a href="https://maps.google.com?q=Sal+Baba+Market,+Behind+Bank+of+Maharashtra,+Naidu+Colony,+Ghatkopar+East,+Mumbai,+Maharashtra+400075" target="_blank" class="footer-link">
-                    <p>Sal Baba Market, Behind Bank of Maharashtra,</p>
+                    <p>Sai Baba Market, Behind Bank of Maharashtra,</p>
                     <p>Naidu Colony, Ghatkopar East,</p>
                     <p>Mumbai, Maharashtra 400075</p>
                 </a>
