--- a/templates/snippet/header.html
+++ b/templates/snippet/header.html
@@ -11,7 +11,7 @@
             <div class="grid-row">
                 <img class="splash" src="{% static 'img/splash.png' %}" alt="">
                 <div class="logo">
-                    <a href="index.html"><img class="kunal" src="{% static 'logo.png' %}" alt=""></a>
+                    <a href="{% url "home:index" %}"><img class="kunal" src="{% static 'logo.png' %}" alt=""></a>
                 </div>
                 <nav class="nav">
                     <a href="#" class="switcher">
